--- a/package.json
+++ b/package.json
@@ -5,14 +5,22 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon src/index.js"
+		"dev": "npx @biomejs/biome check --write && nodemon src/index.js",
+		"format": "npx @biomejs/biome format --write",
+		"lint": "npx @biomejs/biome lint --write",
+		"format:check": "npx @biomejs/biome check --write",
+		"db:generate": "drizzle-kit generate",
+		"db:migrate": "drizzle-kit migrate",
+		"db:studio": "drizzle-kit studio"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"type": "module",
 	"dependencies": {
+		"@neondatabase/serverless": "^1.0.1",
 		"dotenv": "^17.2.2",
+		"drizzle-orm": "^0.44.5",
 		"express": "^5.1.0",
 		"helmet": "^8.1.0",
 		"mongoose": "^8.18.1",
@@ -20,6 +28,7 @@
 		"nodemon": "^3.1.10"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "2.2.4"
+		"@biomejs/biome": "2.2.4",
+		"drizzle-kit": "^0.31.4"
 	}
 }
