--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"helmet": "^8.1.0",
 		"mongoose": "^8.18.1",
 		"morgan": "^1.10.1",
-		"nodemon": "^3.1.10"
+		"nodemon": "^3.1.10",
+		"winston": "^3.17.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.2.4",
