--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"drizzle-orm": "^0.44.5",
 		"express": "^5.1.0",
 		"helmet": "^8.1.0",
+		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.18.1",
 		"morgan": "^1.10.1",
 		"nodemon": "^3.1.10",
