--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 		"mongoose": "^8.18.1",
 		"morgan": "^1.10.1",
 		"nodemon": "^3.1.10",
-		"winston": "^3.17.0"
+		"winston": "^3.17.0",
+		"zod": "^4.1.11"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.2.4",
