--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"type": "module",
 	"dependencies": {
 		"@neondatabase/serverless": "^1.0.1",
+		"bcrypt": "^6.0.0",
 		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.2",
